Implement Android splash screen

--- a/strv_app_implemented/android/app/src/main/res/drawable-v23/launch_background.xml
+++ b/strv_app_implemented/android/app/src/main/res/drawable-v23/launch_background.xml
@@ -5,13 +5,9 @@
 
     <!-- You can insert your own image assets here -->
     <item
-        android:left="180dp"
-        android:right="180dp"
-        android:gravity="center">
+        android:width="180dp"
+        android:height="180dp"
+        android:drawable="@drawable/ic_launcher_foreground"
+        android:gravity="center" />
 
-        <bitmap
-        android:gravity="fill_horizontal|fill_vertical"
-            android:src="@drawable/ic_launcher_foreground" />
-
-    </item>
 </layer-list>
